[project]
name = "mcp-proxy-irule"
version = "0.1.0"
description = "Multi-server MCP testing framework with WebSocket and SSE support for developing an iRule proxy"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.0",
    "aiohttp-cors>=0.7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]